--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,16 @@
 
 # Icon must end with two \r
 Icon
+### Database ###
+*.accdb
+*.db
+*.dbf
+*.mdb
+*.pdb
+*.sqlite3
+*.sqlite
+*.db-shm
+*.db-wal
 
 
 # Thumbnails
